<resources>
    <string name="app_name">Store</string>


    <string name="intro">Simple Product Store , Welcome !</string>
    <string name="newUser1">Not a Member yet?</string>
    <string name="newUser2">Sign Up here.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="oldUser1">Already have account ?</string>
    <string name="oldUser2">Login here .</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_product">Add Product</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="update">Update</string>

</resources>
